ensure that the first menu item doesn't take too much space.

--- a/sites/all/themes/drupalrocks/css/custom/style-combined.css
+++ b/sites/all/themes/drupalrocks/css/custom/style-combined.css
@@ -222,6 +222,10 @@ header .socialandsearch form {
     padding: 0 20px 7px;
 }
 
+#main #navigation nav ul li:first-child a {
+  padding-left: 0;
+}
+
 #main #navigation nav ul li ul.menu {
     min-width: 100%;
     display: none;
